# agent-vis-framework

./: .gitignore  CLAUDE.md  CODING_AGENT_GUIDE.md  README.md  pyproject.toml  start.sh  status.sh  stop.sh
agentic_workflow_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
app/: __init__.py  cli.py  factory.py  main.py  ui.py
app/api/: routes.py
app/core/: __init__.py  config_loader.py  graph_builder.py  registry.py  run_store.py  state.py
app/models/: anthropic_provider.py  base.py  mock_provider.py  openai_provider.py
app/nodes/: base.py  constraint_builder.py  doc_reader.py  domain_generator.py  mcp_call.py  mcp_discovery.py  report_generator.py  source_reader.py  test_runner.py  test_validator.py  test_writer.py  tnt_cli_reducer.py  variable_classifier.py  variable_extractor.py
app/schemas/: __init__.py  artifacts.py  node_io.py  workflow.py
app/tools/: base.py  example_mcp_server.py  mcp_client.py  mcp_tool.py  shell_tool.py  tnt_cli_tool.py
configs/: mcps.yaml  models.yaml  tools.yaml
configs/prompts/: doc_reader.md
configs/prompts/prompts/: report_generator.md
configs/workflows/: combinatorial_test_generation.yaml  mcp_discovery_demo.yaml  starter_three_node.yaml
examples/: sample_input.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css  types.ts
tests/: test_config_loader.py  test_graph_builder.py  test_mcp_tool.py  test_run_store.py
