[project]
name = "agentic-workflow-framework"
version = "0.1.0"
description = "Config-driven FastAPI + LangGraph framework for reusable multi-agent workflows."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.0",
    "typing-extensions>=4.12.0",
]

[project.scripts]
agentic-workflow = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
